modified final line of last cell to SHOW TABLES

--- a/notebooks/06_load_excel_files/06_load_excel_files.ipynb
+++ b/notebooks/06_load_excel_files/06_load_excel_files.ipynb
@@ -3,6 +3,14 @@
   "kernelspec": {
    "display_name": "Streamlit Notebook",
    "name": "streamlit"
+  },
+  "lastEditStatus": {
+   "notebookId": "gorqk4hj6frmx4rkkq3l",
+   "authorId": "4202578379983",
+   "authorName": "SLATERC3",
+   "authorEmail": "cslat22@wgu.edu",
+   "sessionId": "0ffa5b11-a74e-47c6-bdec-b0747f3817f8",
+   "lastEditTime": 1739281418659
   }
  },
  "nbformat_minor": 5,
@@ -110,7 +118,7 @@
     "name": "sql_debugging"
    },
    "outputs": [],
-   "source": "--DESCRIBE TABLE LOCATION;\n--SELECT * FROM LOCATION;\n--SHOW TABLES;",
+   "source": "--DESCRIBE TABLE LOCATION;\n--SELECT * FROM LOCATION;\nSHOW TABLES;",
    "execution_count": null
   }
  ]
